@@ -359,6 +359,16 @@ main_window_key_press_event_cb (GtkWidget*   widget,
 			break;
 		}
 	}
+	else if ((event->state & (GDK_CONTROL_MASK)) == (GDK_CONTROL_MASK)) {
+		switch (event->keyval) {
+		case GDK_l:
+			/* Select the search text and focus it, it the search tab is shown. */
+			if (gtk_notebook_get_current_page (devhelp->notebook) == 1) {
+				gtk_editable_select_region (GTK_EDITABLE (devhelp->entry), 0, -1);
+				gtk_widget_grab_focus (devhelp->entry);
+			}
+		}
+	}
 }
 
 static void
